--- a/vxd/Work/Tasks/Tasks.html
+++ b/vxd/Work/Tasks/Tasks.html
@@ -143,10 +143,10 @@ p{display:block;position:fixed;x:0;y:0;width:100%;height:100%;overflow:auto;}
 <DIV ID="Respond1075923904" style="z-index:1;position:fixed;left:416px;width:50px;height:60px;top:-257px;" title="Items that I need to respond to that are pending."></DIV></a>
  
 <a >
-<DIV ID="Medical-865086090" style="z-index:1;position:fixed;left:735px;width:50px;height:60px;top:408px;" title="Medical Related Items"></DIV></a>
+<DIV ID="Medical-865086090" style="z-index:1;position:fixed;left:863px;width:50px;height:60px;top:712px;" title="Medical Related Items"></DIV></a>
  
 <a >
-<DIV ID="COVID234295278" style="z-index:1;position:fixed;left:784px;width:50px;height:60px;top:501px;" title="Get Innoculated"></DIV></a>
+<DIV ID="COVID234295278" style="z-index:1;position:fixed;left:866px;width:50px;height:60px;top:828px;" title="Get Innoculated"></DIV></a>
  
 <a >
 <DIV ID="Daily1739124319" style="z-index:1;position:fixed;left:15px;width:50px;height:60px;top:8px;" title="Daily Tasks"></DIV></a>
@@ -239,7 +239,7 @@ p{display:block;position:fixed;x:0;y:0;width:100%;height:100%;overflow:auto;}
 <DIV ID="TitleEquinox375608884" style="z-index:1;position:fixed;left:1091px;width:50px;height:60px;top:802px;" title="Get the title for the Equinox"></DIV></a>
  
 <a >
-<DIV ID="RegistrationExtension372177039" style="z-index:1;position:fixed;left:782px;width:50px;height:60px;top:579px;" title="Get extension for registration"></DIV></a>
+<DIV ID="RegistrationExtension372177039" style="z-index:1;position:fixed;left:795px;width:50px;height:60px;top:823px;" title="Get extension for registration"></DIV></a>
  
 <a >
 <DIV ID="Losses1063031189" style="z-index:1;position:fixed;left:1019px;width:50px;height:60px;top:671px;" title=""></DIV></a>
@@ -263,7 +263,7 @@ p{display:block;position:fixed;x:0;y:0;width:100%;height:100%;overflow:auto;}
 <DIV ID="Connection1197019782" style="z-index:1;position:fixed;left:-1px;width:50px;height:60px;top:-1px;" title=""></DIV></a>
  
 <a >
-<DIV ID="Bitcoin1126613994" style="z-index:1;position:fixed;left:627px;width:50px;height:60px;top:456px;" title=""></DIV></a>
+<DIV ID="Bitcoin1126613994" style="z-index:1;position:fixed;left:939px;width:50px;height:60px;top:828px;" title=""></DIV></a>
  
 <a >
 <DIV ID="Now242935934" style="z-index:1;position:fixed;left:640px;width:50px;height:60px;top:737px;" title=""></DIV></a>
@@ -317,6 +317,9 @@ p{display:block;position:fixed;x:0;y:0;width:100%;height:100%;overflow:auto;}
 <DIV ID="Laundry1653999524" style="z-index:1;position:fixed;left:342px;width:50px;height:60px;top:899px;" title=""></DIV></a>
  
 <a >
+<DIV ID="Connection339993487" style="z-index:1;position:fixed;left:-1px;width:50px;height:60px;top:-1px;" title=""></DIV></a>
+ 
+<a >
 <DIV ID="FoodDrinkCigs861343078" style="z-index:1;position:fixed;left:34px;width:50px;height:60px;top:786px;" title="Food Cigs Drink"></DIV></a>
  
 <a >
@@ -335,13 +338,13 @@ p{display:block;position:fixed;x:0;y:0;width:100%;height:100%;overflow:auto;}
 <DIV ID="TempAddress1502500609" style="z-index:1;position:fixed;left:652px;width:50px;height:60px;top:824px;" title="Get temporary address for homeless people for title,registration and licensing"></DIV></a>
  
 <a >
-<DIV ID="BBB1508845541" style="z-index:1;position:fixed;left:563px;width:50px;height:60px;top:452px;" title="Submit complaints for BigO, All Terrain and Autocare 2000"></DIV></a>
+<DIV ID="BBB1508845541" style="z-index:1;position:fixed;left:416px;width:50px;height:60px;top:822px;" title="Submit complaints for BigO, All Terrain and Autocare 2000"></DIV></a>
  
 <a >
 <DIV ID="SSCard1618512876" style="z-index:1;position:fixed;left:1094px;width:50px;height:60px;top:868px;" title="Get Social Security Card"></DIV></a>
  
 <a >
-<DIV ID="DMV939426434" style="z-index:1;position:fixed;left:1091px;width:50px;height:60px;top:937px;" title="Licensing, registration titling"></DIV></a>
+<DIV ID="DMV939426434" style="z-index:1;position:fixed;left:1091px;width:50px;height:60px;top:931px;" title="Licensing, registration titling"></DIV></a>
  </span></p>
 
     </body>
